[gd_scene load_steps=11 format=2]

[ext_resource path="res://entity/inventory/support_item/ammo_item/ammo_box.obj" type="ArrayMesh" id=1]
[ext_resource path="res://entity/inventory/support_item/ammo_item/ammo_item.gd" type="Script" id=2]
[ext_resource path="res://assets/model/area.obj" type="ArrayMesh" id=4]

[sub_resource type="SpatialMaterial" id=10]
resource_name = "Material.005"
albedo_color = Color( 0.713726, 0.25098, 0, 1 )
metallic = 0.5

[sub_resource type="SpatialMaterial" id=8]
resource_name = "Material.005"
albedo_color = Color( 0.025394, 0.025394, 0.025394, 1 )
metallic = 0.5

[sub_resource type="SpatialMaterial" id=9]
resource_name = "Material.005"
albedo_color = Color( 0, 0.313726, 0.0196078, 1 )
metallic = 0.5

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
flags_albedo_tex_force_srgb = true
flags_do_not_receive_shadows = true
albedo_color = Color( 1, 0.447059, 0, 0.34902 )

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "heal"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3, 0.4, 3 ), Vector3( 3.2, 0.4, 3.2 ), Vector3( 3, 0.4, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance3:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="CylinderShape" id=5]
height = 4.0
radius = 3.0

[node name="ammo_item" type="Spatial"]
script = ExtResource( 2 )
equip_animation = "equip_item"

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
software_skinning_transform_normals = false
material/0 = SubResource( 10 )
material/1 = SubResource( 8 )
material/2 = SubResource( 9 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -0.862046, 0, -2.99629, 0, 0.4, 0, 2.99629, 0, -0.862046, 0, -0.242474, 0 )
cast_shadow = 0
mesh = ExtResource( 4 )
software_skinning_transform_normals = false
material/0 = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3"]
root_node = NodePath("../..")
autoplay = "heal"
anims/RESET = SubResource( 3 )
anims/heal = SubResource( 4 )

[node name="area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0104416, 0 )
collision_mask = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="area"]
shape = SubResource( 5 )

[node name="rearm_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = "Sfx"

[connection signal="timeout" from="rearm_timer" to="." method="_on_rearm_timer_timeout"]
